# hidock_direct-runtime

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  task.md
docs/: SETUP.md  index.html  install-guide.html
scripts/: bootstrap.sh  manual_verify.sh  probe_listing.py  refresh_diarize.sh  refresh_jensen.sh
src/diarize_audio/: VENDORED_COMMIT  __init__.py  __main__.py  assemblyai_client.py  config.py  drive_sync.py  inbox.py  locks.py  pipeline.py  render.py  state.py  worker.py
src/hidock_direct/: __init__.py  __main__.py  _pth_bootstrap.py  app.py  classify.py  config.py  device.py  events.py  locks.py  offload.py  state.py  transcribe.py  tui.py  tui_handlers.py  usb_watcher.py
src/hidock_direct/jensen/: README.md  VENDORED_COMMIT  __init__.py  config_and_logger.py  hidock_device.py  hta_converter.py  jensen_protocol_extensions.py
tests/: conftest.py  test_classify.py  test_classify_integration.py  test_config.py  test_connection_error_handling.py  test_count_delta_scan.py  test_device_adapter.py  test_events.py  test_locks.py  test_offload.py  test_pth_bootstrap.py  test_scripts_use_localhostname.py  test_state.py  test_state_machine.py  test_transcribe_events.py  test_tui_handlers.py  test_tui_keyboard.py  test_vendored_diarize.py
tests/fixtures/: mock_device.py
