[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hidock-direct"
version = "0.1.0"
description = "Foreground macOS TUI that pulls audio off the HiDock device over USB into a local archive."
requires-python = ">=3.11"
dependencies = [
    "pyusb>=1.2",
    "rich>=13.7",
    "python-dotenv>=1.0",
    # Pure-python audio metadata reader. Used by state.audio_duration_minutes
    # to read duration from both WAV (HTA-converted from H1 model) and MP3
    # (P1 model native) headers without an ffmpeg dependency.
    "mutagen~=1.47",
    # Transcription. diarize_audio is VENDORED under src/diarize_audio/ (pinned
    # in src/diarize_audio/VENDORED_COMMIT, re-synced via scripts/refresh_diarize.sh);
    # assemblyai is its one non-stdlib runtime dependency, declared here so a base
    # `pip install` of hidock pulls everything the transcription path needs.
    "assemblyai>=0.30",
]

[project.optional-dependencies]
# Google Drive upload for the vendored diarize_audio (DRIVE_ENABLED=true).
# Requires blake-commons, a private package the maintainer installs separately;
# the base install transcribes via AssemblyAI to local .md/.aai.json without it.
# A colleague never installs this — Drive is off by default.
drive = [
    "blake-commons",
]
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
hidock-direct = "hidock_direct.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hidock_direct.jensen" = ["VENDORED_COMMIT", "README.md", "LICENSE"]
"diarize_audio" = ["VENDORED_COMMIT"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["src/hidock_direct"]
omit = [
    # Vendored third-party code — pinned by commit in jensen/VENDORED_COMMIT.
    # Not ours to own; upstream tests apply.
    "src/hidock_direct/jensen/*",
    # Vendored diarize_audio — pinned in diarize_audio/VENDORED_COMMIT, owned by
    # the canonical diarize_audio-runtime repo + its own suite. Already outside
    # `source` above; listed explicitly so a future `source` broadening can't
    # silently start counting it.
    "src/diarize_audio/*",
    # Entry point + TUI rendering — hardware-coupled, exercised by the
    # manual Gate 4 procedure in scripts/manual_verify.sh rather than
    # unit tests.
    "src/hidock_direct/__main__.py",
    "src/hidock_direct/tui.py",
    "src/hidock_direct/usb_watcher.py",
    "src/hidock_direct/device.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
